syntax = "proto3";

package database;

import "google/protobuf/empty.proto";

option go_package = "proto/databasepb";

service DatabaseService {
  rpc Register (CreateNewUserRequest) returns (AuthResponse);
  rpc Login (LoginUserRequest) returns (AuthResponse);
  rpc UpdatePassword (UpdatePasswordRequest) returns (BaseResultResponse);
  rpc UpdateProfile (UpdateRequest) returns (BaseResultResponse);
  rpc FindProfile (FindProfileRequest) returns (FindProfileResponse);
  rpc GetProfileInfo (GetProfileInfoRequest) returns (GetProfileInfoResponse);
  rpc MyProfile (GetProfileInfoRequest) returns (MyProfileResponse);

  rpc Ping (google.protobuf.Empty) returns (BaseResultResponse);
}

// Requests
message CreateNewUserRequest {
  string nickname = 1;
  string email = 2;
  string password = 3;
}

message LoginUserRequest {
  oneof login_method {
    string username = 1;
    string email = 2;
  }
  string password = 3;
}

message UpdatePasswordRequest {
  string email = 1;
  string password = 2;
}

message UpdateRequest {
  string value = 1;
  string type = 2;
  int64 userId = 3;
}

message FindProfileRequest {
  string name = 1;
}

message GetProfileInfoRequest {
  int64 id = 1;
}

// Responses
message BaseResultResponse {
  string result = 1;
}

message AuthResponse {
  string userId = 1;
  string result = 2;
}

message FindProfileBody {
  int64 id = 1;
  string nickname = 2;
  string username = 3;
  string avatar = 4;
  string banner = 5;
  string registered_at = 6;
}

message FindProfileResponse {
  repeated FindProfileBody body = 1;
  string error = 2;
}

message GetProfileInfoResponse {
  FindProfileBody body = 1;
  string error = 2;
}

message MyProfileResponse {
  FindProfileBody body = 1;
  string error = 2;
}